--- a/www/css/paginator.css
+++ b/www/css/paginator.css
@@ -4,22 +4,25 @@
     
     .paginator .pagin-container {
       display: -webkit-flex;
+      display: -ms-flexbox;
       display: flex;
       clear: both;
-      margin-right: -10px;
+      margin-right: -20px;
     }
       .paginator .pagin-container.pagin-wrap {
         -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-        margin-bottom: -10px;
+        margin-bottom: -20px;
       }
       .paginator .pagin-container .item {
         -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
         flex-grow: 1;
-        margin-right: 10px;
+        margin-right: 20px;
       }
       .paginator .pagin-container.pagin-wrap .item {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
       }
     .controll {
       margin-top: 20px;
@@ -37,8 +40,6 @@
         border-radius: 50%;
         border: 1px solid #97A9C9;
         cursor: pointer;
-        -webkit-transition: color 0.2s ease,
-                    background-color 0.2s ease;
         transition: color 0.2s ease,
                     background-color 0.2s ease;
       }
