--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -57,7 +57,6 @@ h6 {
   color : #333333;
 }
 .lead {
-  margin-top: 20px;
   font-family: 'Open Sans', sans-serif;
   font-size : 0.8rem;
   line-height : 1.42em;
@@ -162,7 +161,7 @@ input.button {
   .add-button.button.middle {
     width: auto;
     padding: 1px 10px 1px 10px;
-    line-height: 40px;
+    line-height: 38px;
     background-color: #ABE766;
     color: #187900;
   }
@@ -172,19 +171,31 @@ input.button {
     }
     .add-button:before {
       margin-right: 10px;
-      vertical-align: middle;
+      vertical-align: baseline;
       font-family: 'FontAwesome';
       font-size: 0.8rem;
       content: '\f067';
     }
-    .submit-button.button
-     {
-      padding: 2px 25px;
-      width: auto;
-      min-width: 200px;
-      background-color: #ABE766;
-      color: #187900;
+  /* Читать далее */
+    .read-button.button {
+      width: 135px;
+      padding: 0 25px 0 10px;
     }
+      .read-button.button:after {
+        position: relative;
+        right: -15px;
+        font-family: 'FontAwesome';
+        content: '\f054';
+       }
+  /* Отправить */
+  .submit-button.button
+    {
+    padding: 2px 25px;
+    width: auto;
+    min-width: 200px;
+    background-color: #ABE766;
+    color: #187900;
+  }
       input.button.submit-button:focus,
       button.button.submit-button:focus,
       .submit-button.button:hover {
@@ -229,30 +240,37 @@ input:not([type="submit"]) {
   input[placeholder]          {text-overflow:ellipsis;}
   input::-moz-placeholder     {text-overflow:ellipsis;}
   input:-ms-input-placeholder {text-overflow:ellipsis;}
-  input::-webkit-input-placeholder {
+  input::-webkit-input-placeholder,
+  textarea::-webkit-input-placeholder {
     color:#B7B7B7;
     opacity: 1; 
     transition: opacity 0.3s ease;
   }
-  input::-moz-placeholder {
+  
+  input::-moz-placeholder,
+  textarea::-webkit-input-placeholder {
     color: #B7B7B7;
     opacity: 1;
     transition: opacity 0.3s ease;
   }
-  input:-ms-input-placeholder  {
+  input:-ms-input-placeholder,
+  textarea:-ms-input-placeholder  {
     color: #B7B7B7;
     opacity: 1;
     transition: opacity 0.3s ease;
   }
-  input:focus::-webkit-input-placeholder {
+  input:focus::-webkit-input-placeholder,
+  textarea:focus::-webkit-input-placeholder {
     opacity: 0;
     transition: opacity 0.3s ease;
   }
-  input:focus::-moz-placeholder {
+  input:focus::-moz-placeholder,
+  textarea:focus::-moz-placeholder {
     opacity: 0;
     transition: opacity 0.3s ease;
   }
-  input:focus:-ms-input-placeholder {
+  input:focus:-ms-input-placeholder,
+  textarea:focus:-ms-input-placeholder {
     opacity: 0;
     transition: opacity 0.3s ease;
   }
@@ -716,63 +734,30 @@ label {
       background-size: contain;
       background-repeat: no-repeat;
     }
-  .tag {
-    color: #808080;
-    background-color: rgba(128, 128, 128, 0.1);
-    padding: 2px 10px;
-    border-radius: 1em;
-    margin-right: 15px;
-    transition: color 0.2s ease,
-                background-color 0.2s ease;
-  }
-    .tag:hover {
-      color: #A8A8A8;
-      background-color: rgba(81, 81, 81, 0.1);
-    }
 
-  /* Дата и тег в новостях */
-    .b-new__item-top {
-      height: 0.7rem;
-    }
-      .b-new__item-top .date {
-        float: left;
-        margin-right: 20px;
-      }
-      .b-new__item-top .tag {
-        float: right;
-      }
-      .b-new__item-top .tag a:not(:last-child):after {
-        content: ', \0020';
-      }
-    .b-new__item-top+a {
-      clear: both;
-    }
-/* Сообщение о регистрации */
-  .alert-register {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-align-items: baseline;
-    -ms-flex-align: baseline;
-    padding: 20px;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    color : #1C5BC9;
-    border: 1px solid #CECECE;
-    border-radius: 4px;
+/* Информация о посте */
+  .b-post__item-info {
+    margin-bottom: 10px;
   }
-    .alert-register .button.middle {
-      margin-left: 20px;
-      padding: 1px 15px;
-      width: auto;
-      min-width: 170px;
+    .date {
+      color: #808080;
+      margin-right: 15px;
     }
-      .alert-register .button.middle:not(:last-child) {
-        margin-bottom: 20px;
+    .author {
+        margin: 0 0 0 5px;
+      }
+    .tag {
+      color: #808080;
+      background-color: rgba(128, 128, 128, 0.1);
+      padding: 2px 10px;
+      border-radius: 1em;
+      margin-right: 15px;
+      transition: color 0.2s ease,
+                  background-color 0.2s ease;
+    }
+      .tag:hover {
+        color: #A8A8A8;
+        background-color: rgba(81, 81, 81, 0.1);
       }
 
   /* Комментарии */
@@ -894,7 +879,7 @@ main {
     background : #FFFFFF;
     border-radius : 4px;
   }
-  section .block .text-content {
+  section .block .text-content p {
     width: 600px;
     margin-right: auto;
     margin-left: auto;
@@ -1060,15 +1045,22 @@ main {
   bottom: 300px;
   left: 40px;
   height: 2.7rem;
-  padding-top: 1.6rem;
+  padding-top: 2.5em;
   width: 50px;
-  color: #A8A8A8;
+  color: #FFFFFF;
   text-align: center;
-  opacity: 0.5;
+  background-color: rgba(0,0,0,0.2);
+  border-radius: 4px;
+  opacity: 0;
+  pointer-events: none;
   cursor: pointer;
-  transition: opacity 0.2s ease;
+  transition: opacity 0.1s ease;
 }
-  .button-to-top:hover {
+  .show-button.button-to-top {
+    opacity: 0.5;
+    pointer-events: auto;
+  }
+  .show-button.button-to-top:hover {
     opacity: 1;
   }
     .button-to-top:before {
@@ -1079,6 +1071,7 @@ main {
       margin-left: -25px;
       font-family: 'FontAwesome';
       font-size: 1.8rem;
+      line-height: 1em;
       content: '\f062';
     }
 /* -------------------- */
