--- a/www/css/styles-main.css
+++ b/www/css/styles-main.css
@@ -1,5 +1,5 @@
 h4 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color : #0038A8;
 }
 .l-appeal {
@@ -36,15 +36,14 @@ h4 {
     .b-news__inner h3,
     .b-new-auto h3 {
       color : #0038A8;
-      margin-bottom: 20px;
     }
     .b-content__lider-article {
       position: relative;
-      padding: 0 0 40px;
+      padding: 0 0 20px;
       z-index: 1;
     }
       .b-content__lider-article-img {
-        margin-bottom: 25px;
+        margin-bottom: 10px;
         width: 100%;
         border-radius: 4px;
         object-fit: cover;
@@ -62,31 +61,10 @@ h4 {
         line-height: 2.5em;
         font-weight: bold;
         color: #FFFFFF;
-        -moz-border-radius : 20px;
-        -webkit-border-radius : 20px;
-        border-radius : 20px;
-      }
-      .b-content__lider-article h4.b-content__lider-article-title {
-        position: absolute;
-        top:  35px;
-        right: -30px;
-        margin: 0;
-        padding: 0 10px;
-        background : rgba(111, 235, 0, 0.8);
-        height : 40px;
-        transform: rotate(45deg);
-        font-family: Open Sans, sans-serif;
-        text-align: center;
-        font-size: 0.8rem;
-        line-height: 2.5em;
-        font-weight: bold;
-        color: #FFFFFF;
-        -moz-border-radius : 20px;
-        -webkit-border-radius : 20px;
         border-radius : 20px;
       }
       .b-content__lider-article-author {
-        margin: 10px 0 20px;
+        margin-bottom: 10px;
       }
         .b-content__lider-article-author-photo {
           position: relative;
@@ -99,7 +77,7 @@ h4 {
         }
         .b-content__lider-article-author-name,
         .b-content__lider-article-author-city {
-              color: #737373;
+          color: #737373;
         }
           .b-content__lider-article-author-city:before {
             content: ' (';
@@ -107,67 +85,21 @@ h4 {
           .b-content__lider-article-author-city:after {
             content: ')';
           }
-      .b-content__lider-article-read {
+      .b-content__lider-article .read-button {
         display: inline-block;
-        margin: 30px 15px 0 0;
-        padding-left: 25px;
-        width: 170px;
-        background-color: #0038A8;
-        background-image: url("../img/icon-read-more-button.svg");
-        background-position: 15px center;
-        background-size: 11px 11px;
-        background-repeat: no-repeat;
+        margin-top: 15px;
       }
-        .b-content__lider-article-read.button {
-          font-size: 14px;
-          line-height: 32px;
-        }
-      .b-content__lider-article-discuss {
-        display: inline-block;
-        padding-left: 25px;
-        height: 33px;
-        width: 150px;
-        background-color: transparent;
-        background-image: url("../img/icon-discuss-button.svg");
-        background-position: 15px center;
-        background-size: 12px 10px;
-        background-repeat: no-repeat;
-        outline: none;
-        border-style : Solid;
-        border-color : #A3A3A3;
-        border-width : 1px;
-        -moz-border-radius : 16px;
-        -webkit-border-radius : 16px;
-        border-radius : 16px;
-        font-family: 'Open Sans', sans-serif;;
-        font-weight : bold;
-        font-size : 0.7rem;
-        line-height : 1.7em;
-        color : #333333;
-        cursor: pointer;
-      }
-        .b-content__lider-article-discuss:hover {
-          border-color: #7D7D7D;
-        }
-        .b-content__lider-article-discuss-sum:before {
-          content: ' (';
-        }
-        .b-content__lider-article-discuss-sum:after {
-          content: ')';
-        }
+
     .b-content__lider-previous,
     .b-content__lider-gaining {
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
       .paginator .pagin-container .item img {
         width: 100%;
         object-fit: cover;
         border-radius: 4px;
       }
-      .paginator .pagin-container .item:not(.b-content__lider-previous-item) img {
-        
-      }
-      
+
       .b-content__lider-previous p{
         margin-bottom: 20px;
       }
@@ -183,9 +115,10 @@ h4 {
           }
       .b-content__lider-previous-item {
         display: block;
-        -webkit-flex-basis: calc(33.33337% - 10px);
-        flex-basis: calc(33.33337% - 10px);
-        max-width: calc(33.33337% - 10px);
+        -ms-flex-preferred-size: calc(33.33337% - 20px);
+        -webkit-flex-basis: calc(33.33337% - 20px);
+        flex-basis: calc(33.33337% - 20px);
+        max-width: calc(33.33337% - 20px);
       }
         .b-content__lider-previous-item img {
           
@@ -196,17 +129,15 @@ h4 {
       }
       .b-content__lider-gaining-item,
       .b-content__popular-item {
-        -webkit-flex-basis: calc(25% - 10px);
-        flex-basis: calc(25% - 10px);
-        max-width: calc(25% - 10px);
+        -ms-flex-preferred-size: calc(25% - 20px);
+        -webkit-flex-basis: calc(25% - 20px);
+        flex-basis: calc(25% - 20px);
+        max-width: calc(25% - 20px);
       }
     .b-content__popular h4,
     .b-new-auto__inner h4,
-    .b-news__inner h3 {
+    .b-news__inner h4 {
       float: left;
-    }
-    h3 + .b-link-show-all {
-      margin-top: 17px;
     }
     .b-link-show-all {
       float: right;
@@ -219,12 +150,12 @@ h4 {
   .b-news__inner {
   }
   .b-news__container {
+    padding-top: 10px;
     clear: both;
   }
     
-    .b-news__inner-item {
-      margin-bottom: 15px;
-      z-index: 1;
+    .b-news__inner-item:not(:last-child) {
+      margin-bottom: 20px;
     }
       .b-news__inner-item > div {
         position: relative;
@@ -247,7 +178,7 @@ h4 {
         z-index: 2;
       }
       .b-news__inner-item img {
-        margin-bottom: 5px;
+        margin-bottom: 7px;
         width:  100%;
         border-radius: 4px;
         object-fit: cover;
@@ -279,14 +210,13 @@ h4 {
     
   }
       .b-new-auto__item {
-        padding-bottom: 10px;
-        -webkit-flex-basis: calc(25% - 10px);
-        flex-basis: calc(25% - 10px);
-        max-width: calc(25% - 10px);
+        -ms-flex-preferred-size: calc(25% - 20px);
+        -webkit-flex-basis: calc(25% - 20px);
+        flex-basis: calc(25% - 20px);
+        max-width: calc(25% - 20px);
       }
         .b-new-auto__item-name,
         .b-new-auto__item-auto {
-          padding-top: 5px;
           font-family: 'Open Sans', sans-serif;;
           font-size : 0.7rem;
           line-height : 1.7em;
@@ -299,9 +229,10 @@ h4 {
 
 @media (max-width: 1100px) {
   .b-new-auto__item {
-      -webkit-flex-basis: calc(25% - 10px);
-      flex-basis: calc(25% - 10px);
-      max-width: calc(25% - 10px);
+      -ms-flex-preferred-size: calc(25% - 20px);
+      -webkit-flex-basis: calc(25% - 20px);
+      flex-basis: calc(25% - 20px);
+      max-width: calc(25% - 20px);
   }
   .b-news__inner-item a {
     font-size: 13px;
@@ -318,11 +249,15 @@ h4 {
     }
   .b-news__container {
     display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
   }
     .b-news__inner-item {
+      -webkit-flex: 0 0 50%;
+      -ms-flex: 0 0 50%;
       flex: 0 0 50%;
     }
     .b-news__inner-item:nth-of-type(odd) {
@@ -331,4 +266,4 @@ h4 {
     .b-news__inner-item:nth-of-type(even) {
       padding-left: 10px;
     }
-}
+}}
