--- a/www/css/styles-one-item-news.css
+++ b/www/css/styles-one-item-news.css
@@ -3,12 +3,19 @@ h3,
 h4 {
   color: #0038A8;
 }
+  .b-one-news img {
+    width: 100%;
+    margin: 15px 0;
+  }
   .b-one-news__title {
     display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     -webkit-align-items: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 20px;
+    margin-top: 20px;
   }
     .b-one-news__title-back {
       max-width: 100px;
@@ -20,27 +27,25 @@ h4 {
       padding-left: 20px;
       border-left: 1px solid #CECECE;
     }
-    .b-new__item-top {
-      margin-left: 75px;
-    }
-      .b-new__item-top .date {
-        margin-right: 20px;
-      }
-    #title-photo {
-      margin: 20px 0;
+    .b-post__item-info {
+      margin-left: 78px;
     }
     .b-one-news__content {
-      padding-top: 20px;
+      padding-top: 10px;
     }
       .b-one-news__content p {
         margin: 5px 0;
       }
       .b-one-news__content img {
-        margin: 5px 0;
+        margin: 15px 0;
         width: 100%;
       }
 
   .b-reclame-item {
     margin-top: 20px;
     width: 100%;
+  }
+
+  .b-comments {
+    margin-top: 20px;
   }
