--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -81,6 +81,9 @@ a {
 a.text {
   color: #0038A8;
 }
+h4 > a {
+  color: #333333;
+}
   a.text:not(.b-filter__switch-item):hover {
     color: #1C86C9;
   }
@@ -352,7 +355,7 @@ label {
     width: 185px;
     height: 86px;
     background-image: url('../img/logo.svg');
-    background-position: center;
+    background-position: left center;
     background-size: contain;
     background-repeat: no-repeat;
     transition: height 0.3s ease;
@@ -399,7 +402,7 @@ label {
     display: -ms-flexbox;
     display: flex;
   }
-    .b-menu__wrapp-login-nav:after {
+    .b-menu__wrapp-login-wrapp:after {
       position: absolute;
       top: 50%;
       right: 0;
@@ -414,7 +417,7 @@ label {
       background-repeat: no-repeat;
       transition: background-image 0.25s ease;
       }
-        .m-open-user-menu.b-menu__wrapp-login-nav:after {
+        .m-open-user-menu.b-menu__wrapp-login-wrapp:after {
           -webkit-transform: rotate(180deg);
           -ms-transform: rotate(180deg);
           transform: rotate(180deg);
@@ -516,37 +519,50 @@ label {
               .b-menu__user-item.m-menu__user-item_exit:before {
                 content: '\f08b';
               }
-    .b-menu__wrapp-login-popup {
+
+  .b-menu__wrapp-popup {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    pointer-events: none;
+    background-color: rgba(0,0,0,0.5);
+    transition: opacity 0.2s ease;
+    z-index: 10000;
+  }
+    .m-open-popap.b-menu__wrapp-popup {
+      opacity: 1;
+      pointer-events: auto;
+    }
+    .b-menu__wrapp-login-popup,
+    .b-menu__wrapp-register-popup-window {
       position: absolute;
-      top: 95px;
-      right: 20px;
-      height: 315px;
-      width: 300px;
-      padding: 30px 20px;
-      -webkit-transform: translate3d(50px, 0, 0);
-      transform: translate3d(50px, 0, 0);
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
       opacity: 0;
       pointer-events: none;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      margin: auto;
+      width: 400px;
+      height: 480px;
+      padding: 30px;
       background-color: #FFFFFF;
       border-radius: 4px;
-      box-shadow: 0px 0px 5px rgba(130, 130, 130, 0.2);
-      transition: opacity 0.2s ease,
-                  -webkit-transform 0.25s ease;
-      transition: opacity 0.2s ease,
-                  transform 0.25s ease;
-      transition: opacity 0.2s ease,
-                  transform 0.25s ease,
-                  -webkit-transform 0.25s ease;
     }
-      .m-open-popap.b-menu__wrapp-login-popup {
+      .m-open-popap.b-menu__wrapp-login-popup,
+      .m-open-popap.b-menu__wrapp-register-popup-window {
         opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
         pointer-events: auto;
       }
       .b-menu__wrapp-login-popup-close {
         position: absolute;
-        top:  10px;
+        top: 10px;
         right:  10px;
         height: 15px;
         width:  15px;
@@ -557,17 +573,17 @@ label {
         background-repeat: no-repeat;
         cursor: pointer;
       }
-      .b-menu__wrapp-login-popup h3,
-      .b-menu__wrapp-register-popup-window h3 {
+      .b-menu__wrapp-login-popup h3 {
         color: #0038A8;
         text-align: center;
-        margin-bottom: 10px;
+        margin-bottom: 40px;
       }
       .b-menu__wrapp-login-popup-enter {
+        margin: auto;
       }
         .b-menu__wrapp-login-popup-enter input {
           width: 100%;
-          margin-bottom: 20px;
+          margin-bottom: 40px;
         }
         .b-menu__wrapp-login-popup-enter .button.middle {
           margin-bottom: 25px;
@@ -582,44 +598,21 @@ label {
           text-align: right;
           display: inline-block;
         }
-    /* Попап регистрации */
-    .b-menu__wrapp-register-popup {
-      position: fixed;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      opacity: 0;
-      pointer-events: none;
-      background-color: rgba(0,0,0,0.5);
-      transition: opacity 0.2s ease;
-      z-index: 10000;
-    }
-      .m-open-popap.b-menu__wrapp-register-popup {
-        opacity: 1;
-        pointer-events: auto;
-      }
-      .b-menu__wrapp-register-popup-window {
-        position: relative;
-        margin: auto;
-        width: 400px;
-        height: 480px;
-        padding: 30px;
-        background-color: #FFFFFF;
-        border-radius: 4px;
-      }
-        .b-menu__wrapp-register-popup-window-register {
-          
+        .b-menu__wrapp-login-popup-enter .button-registration + p {
+          text-align: center;
         }
-          .b-menu__wrapp-register-popup-window-register input:not([type="radio"]) {
+    /* Попап регистрации */
+        .b-menu__wrapp-register-popup-window h3 {
+          color: #0038A8;
+          text-align: center;
+          margin-bottom: 20px;
+        }
+        .b-menu__wrapp-register-popup-window-register input:not([type="radio"]) {
             width: 100%;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
           }
           p.input-radio-block {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
           }
           .input-radio-block label {
             padding: 0 30px;
@@ -695,7 +688,7 @@ label {
           }
 
       .b-menu__wrapp-register-popup-window .b-menu__wrapp-login {
-        margin-top: 40px;
+        margin-top: 20px;
         text-align: center;
         cursor: pointer;
       }
@@ -861,11 +854,6 @@ main {
   section {
     margin-bottom: 20px;
   }
-  .b-main-title > h1,
-  .b-main-title > h3 {
-    margin-bottom: 30px;
-    color: #0038A8;
-  }
   section .block {
 /*     display: -webkit-flex;
     display: flex;
@@ -884,6 +872,68 @@ main {
     margin-right: auto;
     margin-left: auto;
   }
+
+  .b-main-title > h1,
+  .b-main-title > h3 {
+    margin-bottom: 30px;
+    color: #0038A8;
+  }
+
+.title-search.b-main-title {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 26px;
+  margin-bottom: 20px;
+}
+  .title-search.b-main-title h1 {
+    margin: 0;
+  }
+  .title-search.b-main-title .b-filter__switch {
+    -webkit-flex: 3;
+    -ms-flex: 3;
+    flex: 3;
+    margin: 0 30px;
+  }
+  .title-search.b-main-title .b-filter__find {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 1rem;
+    border: 1px solid rgba(28, 91, 201, 0.1);
+    transition: width 0.5s ease;
+    cursor: pointer;
+  }
+    .title-search.b-main-title .b-filter__find:after {
+      position: absolute;
+      margin: auto;
+      font-family: 'FontAwesome';
+      top: -2px;
+      left: 0.49em;
+      line-height: 40px;
+      font-size: 1rem;
+      content: '\f002';
+    }
+    .title-search.b-main-title .open-search.b-filter__find {
+      width: 350px;
+    }
+  .b-filter__find input {
+    height: 100%;
+    width: 100%;
+    padding: 1px 10px 1px 40px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    border-radius: 1rem;
+    cursor: pointer;
+  }
+
     .dropdown-block {
       position: absolute;
       top: 32px;
@@ -1108,6 +1158,9 @@ main {
         color: #020202;
       }
 @media (max-width: 1100px) {
+  html {
+    font-size: 18px;
+  }
   .b-menu__wrapp-logo {
     background-image: url('../img/logo-tablet.svg');
   }
