--- a/www/css/styles-community.css
+++ b/www/css/styles-community.css
@@ -11,15 +11,13 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    margin: 20px 0;
-  }
-  .b-main-title > h1 {
-    margin: 0;
+    margin-top: 26px;
+    margin-bottom: 20px;
   }
     .b-main-title .b-filter__switch {
-      min-width: 360px;
+      max-width: 435px;
     }
-  .paginator {
+  .b-community__container {
     padding-top: 16px;
   }
   .b-community__item {
@@ -29,29 +27,57 @@
     max-width: calc(33.33337% - 20px);
   }
     .b-community__item img {
-      margin-bottom: 7px;
       width: 100%;
+      height: 200px;
       object-fit: cover;
       border-radius: 4px;
     }
+    .b-community__item-info {
+      position: relative;
+      margin-top: 20px;
+    }
+      .b-community__item-avatar {
+        position: absolute;
+        top: -65px;
+        left: -5px;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        height: 60px;
+        width: 60px;
+        border-radius: 50%;
+        background-color: #FFFFFF;
+      }
+        .b-community__item-avatar img {
+          height: 50px;
+          width: 50px;
+          object-fit: cover;
+          border-radius: 50%;
+          margin: auto;
+        }
 
   .b-community__item .text {
     line-height: 1.1rem;
   }
-  .b-community__item a {
-    font-weight: bold;
-    color: #1C5BC9;
-    transition: color 0.2s ease;
-  }
-    .b-community__item a:hover {
-      color: #297DE2;
+    .b-community__item-auto {
+      font-weight: bold;
+      color: #1C5BC9;
     }
-  .b-filter-wrapp a {
-    color: #0038A8;
-  }
-  .b-filter__switch {
-    margin-top: 0;
-  }
+      .b-community__item-auto a:hover {
+        color: #297DE2;
+      }
+    .b-community__item-author {
+      margin-top: 6px;
+    }
+      .b-community__item-author a {
+        color: #333333;
+      }
+        .b-community__item-author a:hover {
+          color: #595959;
+        }
+      .b-community__item-author a:not(:last-child) {
+        margin-right: 10px;
+      }
    
   .b-filter__switch-item {
     float: left;
@@ -81,19 +107,10 @@
     clear: both;
     padding-top: 20px;
   }
-    .b-filter h4 {
-      color: #1C5BC9;
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 7px;
-    }
-      .b-filter h5 {
-        color: #1C5BC9;
+      .b-filter-wrapp .droplist-item,
+      .b-filter-wrapp .droplist-current {
         text-align: center;
-        font-weight: bold;
-        margin-bottom: 20px;
       }
-
     .b-add-car__form-item.droplist {
       width: 100%;
     }
