--- a/www/css/styles-company.css
+++ b/www/css/styles-company.css
@@ -27,11 +27,11 @@
     border-radius: 10px;
     border: 1px solid  rgba(163, 163, 163, 0.4);
   }
-    .b-company__item[data-top-company] {
+    .b-company__item[data-top-item] {
       position: relative;
       border: 4px solid #FFCC5C;
     }
-      .b-company__item[data-top-company]:after {
+      .b-company__item[data-top-item]:after {
         position: absolute;
         top: -4px;
         right: -4px;
@@ -46,7 +46,7 @@
         font-size: 0.7rem;
         z-index: 2;
       }
-      .b-company__item[data-top-company]:before {
+      .b-company__item[data-top-item]:before {
         position: absolute;
         top: 1px;
         right: 2px;
@@ -56,7 +56,6 @@
         content: 'TOP COMPANY';
         font-family : Open Sans;
         font-weight : bold;
-        color : #333333;
         font-size: 0.7rem;
         background-color: #FFFFFF;
         z-index: 1;
@@ -65,19 +64,25 @@
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
+      -webkit-flex: 1 0 25%;
+      -ms-flex: 1 0 25%;
+      flex: 1 0 25%;
       margin: 10px 0;
-      min-width: 190px;
+      max-width: 25%;
     }
       .b-company__logo img {
         margin: auto;
-        max-width: 190px;
-        height: 100%;
+        width: 100%;
+        max-height: 150px;
         object-fit: contain;
       }
     .b-company-text {
+      -webkit-flex: 1 0 65%;
+      -ms-flex: 1 0 65%;
+      flex: 1 0 65%;
       margin-left: 20px;
-      padding: 20px 20px 10px 0;
-      max-width: 500px;
+      padding: 10px 20px 10px 0;
+      max-width: 65%;
       height: 100%;
       border-right: 1px solid  rgba(163, 163, 163, 0.2);
     }
@@ -98,40 +103,34 @@
           justify-content: space-between;
           margin-bottom: 10px;
         }
-          .wrap-tags {
-            max-width: 310px;
-          }
-            .wrap-tags a.tag {
-              line-height: 1.9em;
-              white-space: nowrap;
-            }
-          .wrap-rating {
-            min-width: 185px;
-          }
-            .wrap-rating p {
-              float: left;
-            }
-              .wrap-rating span:after {
-                margin-right: 3px;
-                font-family: 'FontAwesome';
-                font-size: 0.9rem;
-                content: '\f005';
-                color: #D2D2D2;
-              }
-                .wrap-rating span[data-ative]:not(.print-rating):after {
-                  color: #EDB867;
-                }
-            .print-rating {
-              margin-left: 5px;
-              width: 60px;
-            }
-            .print-rating:before {
-              content: '(';
-            }
-            .print-rating:after {
-              content: ')';
-            }
+    .wrap-tags {
+      -webkit-flex: 1 0 70%;
+      -ms-flex: 1 70%;
+      flex: 1 0 70%;
+      max-width: 320px;
+    }
+    @media (max-width: 1180px) {
+      .wrap-tags {
+        max-width: 260px;
+      }
+    }
+    @media (max-width: 1000px) {
+      .wrap-tags {
+        max-width: 200px;
+      }
+    }
+    .wrap-tags + div {
+      -webkit-flex: 1 0 30%;
+      -ms-flex: 1 30%;
+      flex: 1 0 230%;
+      max-width: 30%;
+      text-align: right;
+    }
       .b-company__item-comments {
+        -webkit-flex: 1 0 5%;
+        -ms-flex: 1 0 5%;
+        flex: 1 0 5%;
+        max-width: 5%;
         display: block;
         margin-left: 20px;
         padding-top: 40px;
@@ -139,7 +138,6 @@
         background-position: top center;
         background-size: 30px auto;
         background-repeat: no-repeat;
-        min-width: 50px;
         height: 60px;
         color: #333333;
         text-align: center;
@@ -168,21 +166,6 @@
       background-size: 185px auto;
     }
 
-.b-filter {
-  
-}
-    .b-filter-wrapp h4 {
-      color: #1C5BC9;
-      text-align: center;
-      font-weight: bold;
-    }
-      .b-filter-wrapp h4 + p {
-        margin-top: 10px;
-        text-align: center;
-      }
-        .b-filter-wrapp h4 + p a {
-          color: #333333;
-        }
       .b-filter-wrapp .droplist-item,
       .b-filter-wrapp .droplist-current {
         text-align: center;
