--- a/www/css/styles-droplist.css
+++ b/www/css/styles-droplist.css
@@ -10,12 +10,13 @@
       left: 20px;
       font-size: 0.7rem;
     }
-    .droplist-current {
+    .droplist-current.text {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 40px;
+      line-height: 40px;
       padding: 7px 23px 7px 18px;
       line-height: 26px;
       background: #F0F0F0;
@@ -36,11 +37,14 @@
       background-position: right center;
       background-size: contain;
       background-repeat: no-repeat;
-      -webkit-transition: -webkit-transform: 0.2s ease;
-      transition: transform: 0.2s ease;
+      -webkit-transition: -webkit-transform: 0.2s ;ease;
+      transition: -webkit-transform: 0.2s;
+      transition: transform: 0.2s ;
+      transition: transform: 0.2s, -webkit-transform: 0.2s;ease
     }
       .m-open-droplist.droplist-current:after {
         -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
         transform: rotate(180deg);
       }
     .droplist-block {
