--- a/www/css/styles-flea-market.css
+++ b/www/css/styles-flea-market.css
@@ -1,92 +1,186 @@
 .b-ad-block {
   
 }
-  a.b-ad__item {
-    display: block;
+  .b-ad__container {
+    padding-top: 26px;
   }
-  .paginator .b-ad__container.container .item {
-    display:-webkit-flex;
+  .b-ad__item {
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 20px;
+    min-width: calc(100% - 20px);
     font-size: 0.7rem;
-    line-height: 1.7rem;
-    width: 100%;
-    padding: 20px 0;
-    border-bottom: 1px dotted #CECECE;
+    border-radius: 10px;
+    border: 1px solid  rgba(163, 163, 163, 0.4);
   }
-  .paginator .b-ad__container.container .item:last-child {
-    border-bottom: none;
-  }
-  .b-ad__item-fav {
-    position: relative;
-    -webkit-flex: 1 1 50px;
-    flex: 1 1 50px;
-    margin-right: 10px;
-  }
-    .b-ad__item-fav:before {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-left: -0.75rem;
-      margin-top: -0.75rem;
-      font-family: 'FontAwesome';
-      font-size: 1.25rem;
-      vertical-align: middle;
-      color: #CECECE;
-      content: '\f006';
-      cursor: pointer;
+    .b-ad__item[data-top-item] {
+      position: relative;
+      border: 4px solid #FFCC5C;
     }
-      .b-ad__item-fav:hover:before {
-        content: '\f005';
+      .b-ad__item[data-top-item]:after {
+        position: absolute;
+        top: -4px;
+        right: -4px;
+        padding: 6px 20px;
+        background-color: #FFCC5C;
+        border-radius:  0 10px 0 10px;
+        display: block;
+        content: 'TOP';
+        font-family : Open Sans;
+        font-weight : bold;
+        color : #333333;
+        font-size: 0.7rem;
+        z-index: 2;
       }
-  .paginator .container .b-ad__item .b-ad__item-img {
-    -webkit-flex: 2 1 200px;
-    flex: 2 1 200px;
-    height: 120px;
-    margin: auto;
-    margin-right: 10px;
+      .b-ad__item[data-top-item]:before {
+        position: absolute;
+        top: 1px;
+        right: 2px;
+        padding: 6px 20px;
+        border-radius:  0 10px 0 10px;
+        display: block;
+        content: 'TOP';
+        font-family : Open Sans;
+        font-weight : bold;
+        font-size: 0.7rem;
+        background-color: #FFFFFF;
+        z-index: 1;
+      }
+
+  .b-ad__item-img {
+    position: relative;
+    -webkit-flex: 1 0 35%;
+    -ms-flex: 1 0 35%;
+    flex: 1 0 35%;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 35%;
+    height: 170px;
+    margin-right: 20px;
   }
-   .paginator .container .b-ad__item .b-ad__item-img > img {
-    height: 100%;
-   }
+    .b-ad__item-fav {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      height: 2rem;
+      margin-right: 20px;
+    }
+      .b-ad__item-fav:before {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        margin-right: -0.75rem;
+        margin-top: -0.75rem;
+        font-family: 'FontAwesome';
+        font-size: 2rem;
+        vertical-align: middle;
+        color: #D2D2D2;
+        content: '\f005';
+        cursor: pointer;
+      }
+        .b-ad__item-fav:hover:before {
+          color: #EDB867;
+        }
+
+   .b-ad__item-img img {
+      margin: auto;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 4px;
+     }
   .b-ad__item-info {
-    -webkit-flex: 3 1 350px;
-    flex: 3 1 350px;
-    padding: 5px 0;
-    margin-right: 10px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: 100%;
+    -webkit-flex: 1 0 56%;
+    -ms-flex: 1 0 56%;
+    flex: 1 0 56%;
+    min-width: 56%;
+    padding: 10px 20px 10px 0;
+    margin-right: 20px;
+    border-right: 1px solid  rgba(163, 163, 163, 0.2);
   }
-    .b-ad__item-info h5 {
+    .b-ad__item-info-top h5 {
       margin-bottom: 10px;
-      height: 5em;
     }
-    .b-ad__item-info-tag {
-      float: left;
+
+    .b-ad__item-info-bottom {
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      margin-top: 10px;
     }
-    .b-ad__item-info-city {
-      float: right;
+    .wrap-tags {
+      -webkit-flex: 1 0 70%;
+      -ms-flex: 1 70%;
+      flex: 1 0 70%;
+      max-width: 300px;
+    }
+      @media (max-width: 1180px) {
+        .wrap-tags {
+          max-width: 260px;
+        }
+      }
+      @media (max-width: 1000px) {
+        .wrap-tags {
+          max-width: 200px;
+        }
+      }
+    .wrap-tags + p {
+      -webkit-flex: 1 0 30%;
+      -ms-flex: 1 30%;
+      flex: 1 0 230%;
+      max-width: 30%;
     }
   .b-ad__item-price {
-    -webkit-flex: 1 1 150px;
-    flex: 1 1 150px;
-    font-size: 1.5rem;
+    -webkit-flex: 1 0 10%;
+    -ms-flex: 1 0 10%;
+    flex: 1 0 10%;
+    max-width: 10%;
+    font-weight: bold;
+    font-size: 1rem;
     text-align: right;
     margin: auto;
   }
 
-  .b-ad__item a {
-    color: #1C5BC9;
-    -webkit-transition: color 0.2s ease;
-    transition: color 0.2s ease;
-  }
-    .b-ad__item a:hover {
-      color: #297DE2;
-    }
-
-.block.b-add-ad {
-  background-color: #1C5BC9;
+.b-add-ad {
   margin-bottom: 20px;
+  border: 2px solid #1C5BC9;
 }
-  .block.b-add-ad h5 {
-    color: #FFFFFF;
+  .b-add-ad h5 {
+    position: relative;
+    font-weight: bold;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 138px;
   }
+    .b-add-ad h5:after {
+      position: absolute;
+      display: block;
+      content: '';
+      top: 100%;
+      height: 137px;
+      width: 100%;
+      background-image: url('../img/bg-aside-bar-company.svg');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 185px auto;
+    }
