--- a/www/css/comments.css
+++ b/www/css/comments.css
@@ -38,6 +38,9 @@
         margin-bottom: 10px;
         margin-right: 10px;
       }
+      .b-comments-item {
+        padding-right: 20px;
+      }
         .b-comments-title-user {
           display: -webkit-flex;
           display: -ms-flexbox;
@@ -46,7 +49,7 @@
           -ms-flex-align: flex-end;
           align-items: flex-end;
         }
-          .b-comments-title-user img {
+          .b-comments .b-comments-title-user img {
             height: 50px;
             width: 50px;
             object-fit: cover;
