--- a/www/css/styles-flea-market.css
+++ b/www/css/styles-flea-market.css
@@ -52,7 +52,6 @@
       }
 
   .b-ad__item-img {
-    position: relative;
     -webkit-flex: 1 0 35%;
     -ms-flex: 1 0 35%;
     flex: 1 0 35%;
@@ -63,55 +62,6 @@
     height: 170px;
     margin-right: 20px;
   }
-    .b-ad__item-fav {
-      position: absolute;
-      bottom: 5px;
-      right: 5px;
-      height: 2.2rem;
-	  width: 2.2rem;
-	  border-radius: 50%;
-	  background-color: #FFFFFF;
-	  cursor: pointer;
-    }
-      .b-ad__item-fav:before {
-        position: absolute;
-        top: 50%;
-        right: 0;
-		left: 0;
-		text-align: center;
-        margin-top: -1rem;
-        font-family: 'FontAwesome';
-        font-size: 2rem;
-        vertical-align: middle;
-        color: #D2D2D2;
-        content: '\f005';
-      }
-	  .b-ad__item-fav:after {
-		  position: absolute;
-		  top: 0.5rem;
-		  left: -400%;
-		  content: attr(data-message);
-		  display: block;
-		  white-space: nowrap;
-		  font-family: 'Open Sans', sans-serif;
-		  font-size: 0.6rem;
-		  padding: 3px 5px;
-		  opacity: 0;
-		  pointer-events: none;
-		  color: #333333;
-		  background-color: #FFFFFF;
-		  border-radius: 0.2rem;
-		  transition: opacity 0.2s ease;
-	  }
-		.show-text-favorite.b-ad__item-fav:after {
-			opacity: 1;
-			pointer-events: auto;
-		}
-        .add-to-favorite.b-ad__item-fav:before,
-        .b-ad__item-fav:hover:before {
-          color: #EDB867;
-        }
-
    .b-ad__item-img img {
       margin: auto;
       width: 100%;
@@ -177,6 +127,7 @@
       max-width: 30%;
     }
   .b-ad__item-price {
+    position: relative;
     -webkit-flex: 1 0 11%;
     -ms-flex: 1 0 11%;
     flex: 1 0 11%;
@@ -186,6 +137,59 @@
     text-align: center;
     margin: auto;
   }
+    .b-ad__item-fav {
+      position: absolute;
+      bottom: -50%;
+      right: 50%;
+      margin-bottom: -2rem;
+      margin-right: -1.1rem;
+      height: 2.2rem;
+      width: 2.2rem;
+      border-radius: 50%;
+      background-color: #FFFFFF;
+      cursor: pointer;
+    }
+      .b-ad__item-fav:before {
+        position: absolute;
+        top: 0.9em;
+        right: 0;
+        left: 0;
+        text-align: center;
+        margin-top: -1rem;
+        font-family: 'FontAwesome';
+        font-size: 1.5rem;
+        vertical-align: middle;
+        color: #D2D2D2;
+        content: '\f005';
+      }
+    .b-ad__item-fav:after {
+      position: absolute;
+      bottom: -1.5rem;
+      left: -2.5rem;
+      content: attr(data-message);
+      display: block;
+      white-space: nowrap;
+      font-family: 'Open Sans', sans-serif;
+      -webkit-font-smoothing: subpixel-antialiased;
+      font-size: 0.6rem;
+      padding: 3px 5px;
+      opacity: 0;
+      pointer-events: none;
+      color: #333333;
+      background-color: #FFFFFF;
+      border-radius: 0.2rem;
+      box-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+      transition: opacity 0.2s ease;
+    }
+    .show-text-favorite.b-ad__item-fav:after {
+      opacity: 1;
+      pointer-events: auto;
+    }
+        .add-to-favorite.b-ad__item-fav:before,
+        .b-ad__item-fav:hover:before {
+          color: #EDB867;
+        }
+
 
 .b-add-ad {
   margin-bottom: 20px;
