--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -334,6 +334,17 @@ label {
       color: rgba(0,0,0,0.4);
     }
 
+/* Правила галереи */
+.after-load .galleryThumb {
+  transition: opacity 0.2s ease;
+}
+  .select-photo.galleryThumb {
+    opacity: 1 !important;
+  }
+  .galleryThumb:not(.select-photo):hover {
+    opacity: 0.8 !important;
+  }
+
 /* menu */
 .l-menu {
   position: fixed;
@@ -888,10 +899,12 @@ main {
 
   .b-main-title > h1,
   .b-main-title > h3 {
-    margin-bottom: 30px;
     color: #0038A8;
   }
-
+.b-main-title {
+  margin-top: 26px;
+  margin-bottom: 20px;
+}
 .title-search.b-main-title {
   display: -webkit-flex;
   display: -ms-flexbox;
