--- a/www/css/styles-one-company.css
+++ b/www/css/styles-one-company.css
@@ -230,31 +230,32 @@ h4 {
 .b-similar {
   
 }
-  .b-similar h3 {
+  .b-similar h4 {
+    color: #1C5BC9;
     text-align: center;
-    color: #333333;
-    line-height: 1.2em;
+    font-weight: bold;
   }
   .b-similar__wrapp {
     margin-top: 20px;
   }
     .b-similar__item {
-      height: 220px;
       width: 100%;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
+      .b-similar__item:last-child {
+        margin-bottom: 0;
+      }
       .b-similar__item img {
-        margin-bottom: 5px;
-        height: 160px;
         width: 100%;
+        margin-bottom: 7px;
         border-radius: 4px;
-        object-fit: cover;
       }
       .b-similar__item a {
         font-weight: bold;
         color: #1C5BC9;
+        text-align: center;
       }
 
     .b-comment h3 {
       margin-bottom: 10px;
-    }
+    }}
