--- a/www/css/styles-flea-market.css
+++ b/www/css/styles-flea-market.css
@@ -11,14 +11,17 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 20px;
+    padding: 0 20px 20px;
     min-width: calc(100% - 20px);
     font-size: 0.7rem;
-    border-radius: 10px;
-    border: 1px solid  rgba(163, 163, 163, 0.4);
+  }
+  .b-ad__item:not(:last-child) {
+    border-bottom: 1px dotted rgba(163, 163, 163, 0.4);
   }
     .b-ad__item[data-top-item] {
       position: relative;
+      padding: 20px;
+      border-radius: 10px;
       border: 4px solid #FFCC5C;
     }
       .b-ad__item[data-top-item]:after {
@@ -52,14 +55,14 @@
       }
 
   .b-ad__item-img {
-    -webkit-flex: 1 0 35%;
-    -ms-flex: 1 0 35%;
-    flex: 1 0 35%;
+    -webkit-flex: 1 0 25%;
+    -ms-flex: 1 0 25%;
+    flex: 1 0 25%;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    max-width: 35%;
-    height: 170px;
+    max-width: 25%;
+    height: 100px;
     margin-right: 20px;
   }
    .b-ad__item-img img {
@@ -85,13 +88,29 @@
     flex: 1 0 45%;
     min-width: 45%;
     padding: 10px 20px 10px 0;
-    margin-right: 20px;
+    margin-right: 10px;
     border-right: 1px solid  rgba(163, 163, 163, 0.2);
   }
     .b-ad__item-info-top h5 {
       margin-bottom: 10px;
+      font-size: 0.7rem;
     }
-
+      .b-ad__item-info-top h5[data-clamp] {
+          position: relative;
+          height: 2.65em;
+          overflow: hidden;
+      }
+        [data-clamp]:after {
+          content: "";
+          text-align: right;
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          width: 15%;
+          height: 1.2em;
+          background: linear-gradient(to right, rgba(255, 255, 255, 0), white 100%);
+          pointer-events: none;
+        }
     .b-ad__item-info-bottom {
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -127,25 +146,34 @@
       max-width: 30%;
     }
   .b-ad__item-price {
-    position: relative;
     -webkit-flex: 1 0 11%;
     -ms-flex: 1 0 11%;
     flex: 1 0 11%;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     max-width: 11%;
+    height: 100%;
+    padding-right: 10px;
     font-weight: bold;
     font-size: 1rem;
-    text-align: center;
-    margin: auto;
+    text-align: right;
+    margin-right: 20px;
+    border-right: 1px solid  rgba(163, 163, 163, 0.2);
   }
+    .b-ad__item-price span {
+      margin: auto 0;
+    }
     .b-ad__item-fav {
-      position: absolute;
-      bottom: -50%;
-      right: 50%;
-      margin-bottom: -2rem;
-      margin-right: -1.1rem;
+      position: relative;
+      -webkit-flex: 1 0 2.2rem;
+      -ms-flex: 1 0 2.2rem;
+      flex: 1 0 2.2rem;
+      max-width: 2.2rem;
       height: 2.2rem;
-      width: 2.2rem;
-      border-radius: 50%;
       background-color: #FFFFFF;
       cursor: pointer;
     }
