--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -772,6 +772,9 @@ label {
       transition: color 0.2s ease,
                   background-color 0.2s ease;
     }
+      .tag:last-child {
+        margin-right: 0px;
+      }
       .tag:hover {
         color: #A8A8A8;
         background-color: rgba(81, 81, 81, 0.1);
