--- a/www/css/styles-company.css
+++ b/www/css/styles-company.css
@@ -91,6 +91,9 @@
         margin-right: 40px;
         margin-bottom: 10px;
       }
+        .firefox h4[data-clamp] {
+          max-height: 2.6em;
+        }
         .b-company-info {
           display: -webkit-flex;
           display: -ms-flexbox;
@@ -102,6 +105,9 @@
           -ms-flex-pack: justify;
           justify-content: space-between;
           margin-bottom: 10px;
+        }
+        .firefox .b-company__item p.text[data-clamp] {
+          height: 5.8em;
         }
     .wrap-tags {
       -webkit-flex: 1 0 70%;
