--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -74,6 +74,24 @@ h6 {
       line-height : 1.33em;
       color : #1C5BC9;
     }
+/* Обрезка текста */
+      .firefox [data-clamp] {
+        display: inline-block;
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+      }
+        .firefox [data-clamp]:after {
+          content: "";
+          text-align: center;
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          width: 15%;
+          height: 1.4em;
+          background: linear-gradient(to right, rgba(255, 255, 255, 0), white 100%);
+          pointer-events: none;
+        }
 a {
   text-decoration: none;
   transition: color 0.15s linear;
