--- a/www/css/styles-one-ad.css
+++ b/www/css/styles-one-ad.css
@@ -37,16 +37,12 @@
     -webkit-flex: 0 0 calc(25% - 20px);
     -ms-flex: 0 0 calc(25% - 20px);
     flex: 0 0 calc(25% - 20px);
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center;
     max-width: calc(25% - 20px);
     margin-left: 20px;
   }
     h3.b-one-ad__info-price {
-      display: inline-block;
-      padding: 5px 35px 15px 35px;
+      padding: 5px 0 15px 0;
+      text-align: center;
       margin-bottom: 20px;
       background-color: #FFCC5C;
       border-radius: 1px 16px 1px 16px;
