--- a/www/css/styles-general.css
+++ b/www/css/styles-general.css
@@ -980,6 +980,9 @@ main {
     border-radius: 1rem;
     cursor: pointer;
   }
+    .b-filter__find.open-search input {
+      background: #F0F0F0;
+    }
 
     .dropdown-block {
       position: absolute;
