--- a/www/css/comments.css
+++ b/www/css/comments.css
@@ -18,14 +18,43 @@
         min-width: 170px;
       }
 /* Стили блока комментов */
-  .b-comments-container {
+  .b-comments-container.pagin-container.pagin-wrap {
     margin: 20px 0 0 20px;
   }
     .paginator .pagin-container .b-comments-item.item {
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: -webkit-box;
+      display: flex;
       min-width: 100%;
       margin-bottom: 20px;
     }
-      .b-comments-title {
+    .b-comments-item img {
+      height: 50px;
+      -webkit-box-flex: 0;
+      -webkit-flex: 0 0 50px;
+      -ms-flex: 0 0 50px;
+      flex: 0 0 50px;
+      max-width: 50px;
+      object-fit: cover;
+    }
+      .b-comments-block {
+        width: 100%;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+        .b-comments-block-title {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: justify;
+          -webkit-justify-content: space-between;
+          -ms-flex-pack: justify;
+          justify-content: space-between;
+          margin-bottom: 10px;
+        }
+/*       .b-comments-title {
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
@@ -50,9 +79,7 @@
           align-items: flex-end;
         }
           .b-comments .b-comments-title-user img {
-            height: 50px;
-            width: 50px;
-            object-fit: cover;
+            
           }
           .b-comments-title-user a {
             margin-left: 10px;
@@ -64,7 +91,7 @@
         }
       .b-comments-text {
         margin-left: 60px;
-      }
+      } */
     .b-comments__add {
       margin-top: 20px;
       margin-bottom: 20px;
